--- a/src/Components/screens/LoginScreen.css
+++ b/src/Components/screens/LoginScreen.css
@@ -1,7 +1,8 @@
 .loginScreen{
     position: relative;
     height: 100%;
-
+    background: url("../images/background.jpg") center no-repeat;
+    background-size: cover;
 }
 
 .loginScreen_logo{
@@ -25,4 +26,66 @@
     cursor: pointer;
     font-weight: 600;
 
+}
+
+.loginScreen_gradient{
+    width: 100%;
+    z-index: 1;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.4);
+    background-image: linear-gradient(to top,
+    rgba(0, 0, 0, 0.8) 0,
+    rgba(0, 0, 0, 0) 60%,
+    rgba(0, 0, 0, 0.8) 100%
+    );
+}
+
+.loginScreen_body{
+    position: absolute;
+    top: 30%;
+    z-index: 1;
+    color: #fff;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 20px;
+    
+}
+
+.loginScreen_body > h1{
+    font-size: 3.125rem;
+    margin-bottom: 20px;
+}
+
+.loginScreen_body > h2{
+    font-size: 2rem;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.loginScreen_body > h3{
+    font-size: 1.3rem;
+    font-weight: 400;
+}
+
+.loginScreen_input{
+    margin: 20px;
+}
+.loginScreen_input >form > input{
+    padding: 10px;
+    outline-width: 0;
+    height: 30px;
+    width: 50%;
+    border: none;
+    max-width: 600px;
+}
+
+.loginScreen_getStarted{
+    padding: 16px 20px;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #e50914;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
 }
