--- a/src/Components/screens/LoginScreen.css
+++ b/src/Components/screens/LoginScreen.css
@@ -49,7 +49,8 @@
     margin-right: auto;
     text-align: center;
     padding: 20px;
-    
+    left: 0;
+    right: 0;
 }
 
 .loginScreen_body > h1{
@@ -78,6 +79,7 @@
     width: 50%;
     border: none;
     max-width: 600px;
+    background-color: #fff;
 }
 
 .loginScreen_getStarted{
