--- a/src/Components/CSS/Row.css
+++ b/src/Components/CSS/Row.css
@@ -1,22 +1,30 @@
 .row{
     color: white;
     background-color: black;
-    padding: 30px;
+    margin-bottom: 35px;
+    margin-top: 20px;
+}
+
+h2{
+    text-align: left;
+    margin-left: 80px;
 }
 
 .row_posters{
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
-    padding: 20px;
+    flex-direction: row;
+
 }
 
 .row_poster{
-    max-height: 100px;
+    height: 150px;
     object-fit: contain;
-    margin-right: 10px;
+    margin-left: 50px;
+    margin-right: 80px;
     width: 100%;
-    transition: transform 450ms;
+    transition: transform 450ms; 
 }
 
 .row_posters::-webkit-scrollbar{
@@ -26,17 +34,26 @@
 .row_poster:hover{
     transform: scale(1.5);
     opacity: 1;
-    margin-bottom: 5px;
-    margin-top: 5px;
-
 }
 
 .row_posterLarge{
-    max-height: 250px;
+    height: 250px;
 }
+
 
 .row_posterLarge:hover{
     transform: scale(1.09);
     opacity: 1;
+}
+
+i{
+    color: white;
+    font-size: 20px;
+}
+
+.bottom_row{
+    margin-left: 50px;
+    text-align: center;
+    width: 100%;
 }
 
