--- a/src/Components/CSS/Row.css
+++ b/src/Components/CSS/Row.css
@@ -59,3 +59,21 @@ i{
 
 
 
+.trailer-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    z-index: 1000;
+}
+
+.trailer-modal iframe {
+    width: 100%;
+    height: 400px;
+}
+
+.row_poster {
+    cursor: pointer;
+}
